----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-07-14 Marc Delisle  <lem9@users.sourceforge.net>
    * index.php, libraries/common.lib.php: bug 989581 and left panel
      display problems when switching themes
    * tbl_relation.php: bug 978111, out of sync in Relation view
      (note: we need to use the PMA_DBI_QUERY_STORE option in a mysqli query
       when we later do a PMA_DBI_num_rows() on the results)

2004-07-13 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2004-07-13 Alexander M. Turek  <me@derrabus.de>
    * libraries/dbi/mysqli.dbi.lib.php: avoid php errors if result set is
      FALSE.
    * libraries/mysql_charsets.lib.php, lang/*.inc.php: Updated collation
      definitions for MySQL 4.1.3 and 4.1.4.
    * lang/german-*.inc.php: Updates.
    * db_details_db_info.php: Fixed a few "out of sync" errors.
    * Documentation.html: removed a pre-php-4.1 note.

2004-07-12 Marc Delisle  <lem9@users.sourceforge.net>
    * all themes/colors.inc.php, libraries/common.lib.php,
      config.inc.php, Documentation.html: rename colors.inc.php to
      layout.inc.php, thanks to Garvin for the suggestion

2004-07-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/catalan update, thanks to Xavier Navarro (xavin).
    * lang/galician: Updated, thanks to Xosé Calvo.
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).

2004-07-09 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug 981793, cross-window update message when inserting
      a record and fetching a value from the browse foreigners window,
      thanks to Michael Keck

2004-07-08 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_qbe.php: undefined offset and undefined variable

2004-07-07 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug 984136, wrong alignment in RTL languages
    * lang/arabic-utf-8, lang/sync_lang.sh: bug 984176, wrong encoding
      for arabic UTF-8. sync with --iconv works.